--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<h1>Awsome Golie Dude</h1>
+<h1>Awesome Golie Dude</h1>
 
 <p>I enjoy the outdoors</p>
 <p>Working on projects with electricity and plumbing</p>
